update side padding update font add radio toggle to about sections correct collapse logic

--- a/components/Wrapper.module.css
+++ b/components/Wrapper.module.css
@@ -1,7 +1,7 @@
 .card {
     background-color: white;
     margin: 10vh auto;
-    padding: 50px 20px;
+    padding: 50px 70px;
     display: flex;
     flex-direction: column;
     justify-content: center;
