--- a/pages/about/Card.module.css
+++ b/pages/about/Card.module.css
@@ -18,7 +18,6 @@
 
 .title {
     text-align: left;
-    font-size: 12pt;
     font-weight: 700;
     color: #555555;
 }
